# Voice-Activity-Detection

./: CMakeLists.txt  LICENSE  README.md  VAD.h  sound.txt  voice_detection.cpp
